# data_analysis_template

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md
reports/source/: conf.py  index.rst  installation.rst
reports/source/reports/: example.rst  index.rst
